[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicestudio-qwen3-tts"
version = "0.0.4"
description = "Qwen-TTS python package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "transformers",
  #"transformers=4.57.3",
  #"accelerate==1.12.0",
  #"gradio",
  "librosa",
  "torchaudio",
  "soundfile",
  "sox",
  #"onnxruntime",
  "einops",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
voicestudio-qwen3-tts-demo = "voicestudio._qwen3_tts.cli.demo:main"

[tool.setuptools]
package-dir = {"voicestudio._qwen3_tts" = "qwen_tts"}
packages = ["voicestudio._qwen3_tts"]
include-package-data = true

[tool.setuptools.package-data]
"voicestudio._qwen3_tts" = ["py.typed", "**/*.npz"]
